<resources>
    <string name="app_name">iotina_blue</string>
    <string name="info_button_label">JPEG!</string>
    <string name="flush_button_label">Flush device</string>
    <string name="focus_lock_button_label">Focus Lock</string>
    <string name="focus_unlock_button_label">Focus Unlock</string>
    <string name="focus_mode_spinner_prompt">AF Mode</string>
    <string name="recording_on_label">Recording On</string>
    <string name="recording_off_label">Recording Off</string>
    <string name="use_media_codec_label">Use MediaCodec</string>
    <string name="auto_control_label">Auto</string>
    <string name="manual_control_label">Manual Control</string>
    <string name="sensitivity_value_prompt">Sensitivity(ISO):</string>
    <string name="exposure_time_prompt">Exposure Time:</string>
    <string name="frame_duration_value_prompt">Frame Duration:</string>
    <string name="capture_result_prompt">Capture Result:</string>
    <string name="manual_ctrl_prompt">Manual Control</string>
    <string name="radio_mp4">mp4</string>
    <string name="radio_webm">webm</string>
    <string-array name="focus_mode_spinner_arrays">
        
        <item>OFF</item>
        <item>AUTO</item>
        <item>MACRO</item>
        <item>CONTINUOUS_VIDEO</item>
        <item>CONTINUOUS_PICTURE</item>
        <item>EDOF</item>
    </string-array>
    <string name="action_info">Info</string>
    <string name="action_mqttsettings">MQTT</string>
    <string name="action_settings">Settings</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_firmwareupdates">Firmware Updates</string>
    <string name="action_refreshcache">Refresh Bluetooth Cache</string>
    <string name="action_about">About</string>
    <string name="dialog_error_no_ble">Bluetooth Low Energy not supported</string>
    <string name="dialog_error_no_bluetooth">Bluetooth not available</string>
    <string name="dialog_error_nolocationservices_requiredforscan_marshmallow">Android 6 requires that Location Services are enabled to scan bluetooth peripherals.\nPlease, go to settings and enable it to start scanning peripherals</string>
    <string name="scan_scanbutton_scan">Scan for peripherals</string>
    <string name="scan_scanbutton_scanning">Scanning…</string>
    <string name="scan_devicesheadertitle">PERIPHERALS</string>
    <string name="scan_nodevicesfound">No peripherals found</string>
    <string name="scan_device_localname">Local Name</string>
    <string name="scan_device_address">Address</string>
    <string name="scan_device_rssi_notavailable">N/A</string>
    <string name="scan_device_connect">Connect</string>
    <string name="scan_device_uuid">UUID</string>
    <string name="scan_device_services">Service UUIDs</string>
    <string name="scan_device_txpower">TX Power Level</string>
    <string name="scan_device_viewadvraw">View raw data</string>
    <string name="scan_device_advertising_title">Advertising Raw Data</string>
    <string name="scan_device_beacon_manufacturer">Manufacturer</string>
    <string name="scan_device_beacon_major">Major</string>
    <string name="scan_device_beacon_minor">Minor</string>
    <string name="scan_device_uribeacon_uri">Uri</string>
    <string name="scan_connecting">Connecting…</string>
    <string name="scan_gettingupdateinfo">Waiting for device info…</string>
    <string name="scan_connectto_dialog_title_format">Choose mode to connect to %s</string>
    <string name="scan_unexpecteddisconnect">Peripheral disconnected</string>
    <string name="scan_tag_id">Id</string>
    <string name="scan_connectservice_info">Info</string>
    <string name="scan_connectservice_uart">UART</string>
    <string name="scan_connectservice_pinio">Pin I/O</string>
    <string name="scan_connectservice_controller">Controller</string>
    <string name="scan_connectservice_beacon">Beacon</string>
    <string name="scan_connectservice_neopixel">Neopixel</string>
    <string name="scan_softwareupdate_title">Update available</string>
    <string name="scan_softwareupdate_messageformat">Software version %s is available</string>
    <string name="scan_bootloaderandfirmwareupdate_messageformat">Software version %1$s and Bootloader version %2$s are available. This is a two-step process: bootloader will be updated first and firmware the next time you connect to the device</string>
    <string name="scan_softwareupdate_install">Install</string>
    <string name="scan_softwareupdate_notnow">Ask later</string>
    <string name="scan_softwareupdate_dontask">Ignore</string>
    <string name="scan_softwareupdate_downloaderror">Software download error</string>
    <string name="scan_softwareupdate_updateerror">Software update error</string>
    <string name="scan_softwareupdate_completed">Software updated successfully</string>
    <string name="scan_failedupdatedetected_title">Failed update detected</string>
    <string name="scan_failedupdatedetected_message">A failed update for this device has been detected.\nIt is strongly recommended to retry updating the device now</string>
    <string name="scan_failedupdatedetected_ok">Update now</string>
    <string name="scan_secondphaseupdatedetected_title">Continue update</string>
    <string name="scan_secondphaseupdatedetected_message">Firmware will be updated now</string>
    <string name="scan_secondphaseupdatedetected_ok">Continue</string>
    <string name="scan_filters_title_filter_format">Filter: %s</string>
    <string name="scan_filters_title_nofilter">No filter selected</string>
    <string name="scan_filters_name_rssi_format">Rssi >= %d</string>
    <string name="scan_filters_name_named">with name</string>
    <string name="scan_filters_name_uart">with UART</string>
    <string name="scan_filters_name_title">Name:</string>
    <string name="scan_filters_name_tip">Find by name</string>
    <string name="scan_filters_name_settings_contains">Name contains</string>
    <string name="scan_filters_name_settings_exact">Name equals</string>
    <string name="scan_filters_name_settings_casesensitive">Matching case</string>
    <string name="scan_filters_name_settings_caseinsensitive">Ignoring case</string>
    <string name="scan_filters_rssi_title">RSSI >=</string>
    <string name="scan_filters_rssi_value_format">%d dBM</string>
    <string name="scan_filters_unnamed">Show unnamed devices</string>
    <string name="scan_filters_onlyuart">Must have UART service</string>
    <string-array name="scan_devicetypes">
        <item>Unkown</item>
        <item>UART capable</item>
        <item>Beacon</item>
        <item>Eddystone</item>
    </string-array>
    <string name="title_activity_mainhelp">Help</string>
    <string name="licenses_title">Licenses</string>
    <string name="title_activity_info">Info</string>
    <string name="info_item_service">Service</string>
    <string name="info_help_title">Info List Help</string>
    <string name="title_activity_uart">UART</string>
    <string name="uart_echo">Echo:</string>
    <string name="uart_eol">EoL:</string>
    <string name="uart_action_eolmode_format">EoL Characters: %s</string>
    <string name="uart_eolmode_n">\\n</string>
    <string name="uart_eolmode_r">\\r</string>
    <string name="uart_eolmode_nr">\\n\\r</string>
    <string name="uart_eolmode_rn">\\r\\n</string>
    <string name="uart_format_ascii">Ascii</string>
    <string name="uart_format_hex">Hex</string>
    <string name="uart_format_hexadecimal">Hexadecimal</string>
    <string name="uart_displaymode_text">Text</string>
    <string name="uart_displaymode_timestamp">Timestamp</string>
    <string name="uart_help_title">UART Help</string>
    <string name="uart_action_displaymode_format">Display Mode: %s</string>
    <string name="uart_action_datamode_format">Data Mode: %s</string>
    <string name="uart_action_echo">Show Echo</string>
    <string name="uart_action_eol">Add Eol</string>
    <string name="uart_action_enabled">On</string>
    <string name="uart_action_disabled">Off</string>
    <string name="uart_copy">Copy</string>
    <string name="uart_share">Share</string>
    <string name="uart_clear">Clear</string>
    <string name="uart_send">SEND</string>
    <string name="uart_share_subject">UART</string>
    <string name="uart_share_empty">Nothing to share. UART text is empty</string>
    <string name="uart_sharechooser_title">Send UART text to…</string>
    <string name="uart_sentbytes_format">Sent: %d bytes </string>
    <string name="uart_receivedbytes_format">Received: %d bytes</string>
    <string name="uart_text_dataomitted">(Previous data omitted to improve performance…)</string>
    <string name="title_activity_pin_io">PinIO</string>
    <string name="pinio_sectiontitle">AVAILABLE PINS</string>
    <string name="pinio_pintype_inputfloating_long">Input Floating</string>
    <string name="pinio_pintype_inputpullup_long">Input Pullup</string>
    <string name="pinio_pintype_unknown">Unknown</string>
    <string name="pinio_pintype_input">Input</string>
    <string name="pinio_pintype_output">Output</string>
    <string name="pinio_pintype_pwm">PWM</string>
    <string name="pinio_pintype_servo">Servo</string>
    <string name="pinio_pintype_analog">Analog</string>
    <string name="pinio_pintype_low">Low</string>
    <string name="pinio_pintype_high">High</string>
    <string name="pinio_pintype_input_floating">Floating</string>
    <string name="pinio_pintype_input_pullup">Pull Up</string>
    <string name="pinio_pinname_digital_format">Pin %d</string>
    <string name="pinio_pinname_analog_format" formatted="false">Pin %d, Analog %d</string>
    <string name="pinio_tag_mode">Mode</string>
    <string name="pinio_help_title">Pin I/O Help</string>
    <string name="pinio_capabilityquery_querying_title">Querying pin capabilities…</string>
    <string name="pinio_capabilityquery_expired_title">No response to capability query</string>
    <string name="pinio_capabilityquery_expired_message">Assuming default pin format (Arduino Uno)</string>
    <string name="pinio_action_refresh">Query capabilities</string>
    <string name="title_activity_controller">Controller</string>
    <string name="controller_uartwarning">Please ensure that your Bluefruit LE module is set to DATA/UART mode when using this application</string>
    <string name="controller_sectiontitle_stream">Stream Sensor Data</string>
    <string name="controller_sectiontitle_interface">Interface</string>
    <string name="controller_help_title">Controller Help</string>
    <string name="controller_location_unknown">Waiting for location data…</string>
    <string name="controller_location_disabled">Location is disabled. Go to settings and enable it to receive location data</string>
    <string name="controller_magnetometermissing">Your device doesn\'t have magnetic sensor</string>
    <string-array name="controller_stream_items">
        <item>Quaternion</item>
        <item>Accelerometer</item>
        <item>Gyro</item>
        <item>Magnetometer</item>
        <item>Location</item>
        <item>Magnetometer</item>
    </string-array>
    <string-array name="controller_interface_items">
        <item>Color Picker</item>
        <item>Control Pad</item>
    </string-array>
    <string name="title_activity_pad">Control Pad</string>
    <string name="title_activity_color_picker">Color Picker</string>
    <string name="colorpicker_help_title">Color Picker Help</string>
    <string name="colorpicker_about_title">Color Picker About</string>
    <string name="colorpicker_send">Send</string>
    <string name="colorpicker_rgbformat">R:%1$d G:%2$d B:%3$d</string>
    <string name="title_activity_beacon">Beacons</string>
    <string name="beacon_help_title">Beacons Help</string>
    <string name="beacon_manufacturer_choose_title">Choose Manufacturer</string>
    <string-array name="beacon_manufacturers_names">
        <item>Apple  (004C)</item>
        <item>Nordic (0059)</item>
    </string-array>
</resources>